[project]
name = "vrp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ortools",
    "requests",
    "fastapi",
    "uvicorn",
    "sqlalchemy>=2.0.47",
    "psycopg2-binary>=2.9.11",
]
dev-dependencies = [
    "httpx",
    "pytest"
]
